# pose_estimation

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml  start_up.sh
config/: config.rviz  config_gt.rviz  spawn_objects.yaml  ur5_controllers.yaml  ur5_gripper_controllers.yaml
launch/: pose_estimation (copy).launch  pose_estimation.launch  rviz_ur5_gripper.launch  rviz_ur5_gripper_camera.launch  spawn_ur5_cam.launch  spawn_ur5_gripper.launch  spawn_ur5_gripper_camera.launch  spawn_ur5_moveit.launch
moveitconfig/: .setup_assistant  package.xml
msg/: DeleteObject.msg  ObjectSpawned.msg
pose_estimation/: CMakeLists.txt
pose_estimation/src/: .setup_assistant  CMakeLists.txt  camera_snap.py  data_collector.py  generate_dataset.py  gripper.py  move_end_effector.py  moveit.py  package.xml  pick_and_place copy.py  pick_and_place.py  requirements.txt  spawn_objects.py  test_predict.py
pose_estimation/src/ml/: config.py  dataset.py  get_model.py  model.py  new.py  predict.py  split_dataset.py  test.py  train.py
pose_estimation/src/services/: camera_snap.py  gripper_service.py  move_coordinates.py  move_single_joint.py  move_to_coordinate copy.py  move_to_coordinate.py  move_to_pose copy.py  move_to_pose.py  moveit.py  spawn_objects.py
roboticsgroup_upatras_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
src/: moveit.py  spawn_objects.py
ur5_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
urdf/: cube.urdf  cylinder.urdf  end_effector.xacro  object1.urdf.xacro  ur5_cam.xacro  ur5_cam_moveit.xacro  ur5_custom.xacro  (+1 more)
(+78 files in other folders)
